--- a/src/css/style.css
+++ b/src/css/style.css
@@ -111,9 +111,12 @@ img {
   height: 1em;
   border-radius: 50%;
   position: relative;
+  left: 50%;
+  top: 20px;
   text-indent: -9999em;
   animation: mulShdSpin 1.1s infinite ease;
   transform: translateZ(0);
+  filter: brightness(0.2);
 }
 @keyframes mulShdSpin {
   0%,
